# tp-lab-7

./: .gitignore  CMakeLists.txt  README.md  a.out  cell.h  common.h  credits  main  object.h  ocean.h
.github/workflows/: cpplint.yml  release.yml
a.out.dSYM/Contents/Resources/DWARF/: a.out
img/: parametrs.json  Видео пример работы программы (ссылка).txt  Обозначения.txt
include/: Cell.h  Common.h  Coordinates.h  Creature.h  Factory.h  None.h  Object.cpp  Object.h  Objects.h  Ocean.h  Pair.h  Predactor.h  Predator.h  Prey.h  README.md  Space.h  Stone.h  a.out  cell.cpp  cell.h  common.h  coral.h  living.h  object.h  object_factory.h  ocean.h  parametr.h  predator.cpp  predator.h  prey.h  scenes.h  stone.cpp  stone.h  world.h
src/: CMakeLists.txt  Cell.cpp  Common.cpp  Factory.cpp  None.cpp  Object.cpp  Objects.cpp  Ocean.cpp  Predactor.cpp  Predator.cpp  Prey.cpp  README.md  Settings.cpp  Space.cpp  Stone.cpp  cell.cpp  common.cpp  common.h  coral.cpp  living.cpp  main  main.cpp  object.cpp  object_factory.cpp  ocean.cpp  preadator.cpp  predator.cpp  prey.cpp  stone.cpp  stone.h  world.cpp
